2006-08-04  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Add hack to disable libtool checking for g++ and
	g77 (copied from libglade).

2006-07-29  John Finlay  <finlay@moeraki.com>

	* gobject/pygobject.h (pyg_param_gvalue_from_pyobject): Fix define
	to point to the correct function pointer field.

2006-07-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygflags.c (pyg_flags_add): idem.

	* gobject/pygenum.c (pyg_enum_add): Give a more explicit error
	message when the gtype is not an enum.

2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.h (init_pygobject_check): Add a macro to easily 
	check the installed pygobject version.

	* gobject/pygflags.c (pyg_flags_add) 
	* gobject/pygenum.c (pyg_enum_add): Duplicate the string before
	sending it to python. Fixes GCC warnings.

2006-07-24  John Finlay  <finlay@moeraki.com>

	* gobject/pygflags.c (pyg_flags_get_first_value_name) 
	(pyg_flags_get_first_value_nick): Avoid segfault when
	g_flags_get_first_value returns NULL.

2006-07-20  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am: Make version.xml dependent on config.h
	Make builddate.xml dependent on REFERENCE_DEPS. Add builddate.xml to
	build_stamp and pdf dependencies. Add pdf files to cleanup.

2006-07-20  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac:
	* docs/Makefile.am:
	* docs/reference/.cvsignore:
	* docs/reference/version.xml.in:
	Generate builddate.xml and version.xml at build time instead on
	configure time, add proper dependencies.

2006-07-19  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am: Use more portable date generator.

	* docs/xsl/ref-html-style.xsl: Add book to list of indexed items.

	* docs/xsl/html.xsl: Output xref links for unknown links.

	* docs/xsl/ref-html-style.xsl: Include refsect1 and refsect2 in
	indexed items but only if they have ids.

	* configure.ac (AC_CONFIG_FILES) : Add docs/reference/version.xml
