@@ -2,6 +2,7 @@ REF_VERSION = $(PYGOBJECT_MAJOR_VERSION).$(PYGOBJECT_MINOR_VERSION)
 FULL_VERSION = $(REF_VERSION).$(PYGOBJECT_MICRO_VERSION)
 
 XMLFILES = 					\
+	reference/pygobject.xml			\
 	reference/pygobject-introduction.xml 	\
 	reference/pygobject-classes.xml 	\
 	reference/pygobject-constants.xml 	\
@@ -24,6 +25,8 @@ XSLFILES =			\
 XSLdir = $(datadir)/pygobject/xsl
 XSL_DATA = $(XSLFILES)
 
+BUILDDIR = $(top_builddir)/docs
+
 HTMLdir = $(datadir)/gtk-doc/html/pygobject
 HTML_DATA = 					\
 	html/pygobject-introduction.html	\
@@ -43,14 +46,10 @@ HTML_DATA = 					\
 
 BUILT_SOURCES = 			\
 	build_stamp 			\
-	reference/builddate.xml		\
-	reference/version.xml 		\
 	$(HTML_DATA)
 
 CLEANFILES = 				\
 	build_stamp 			\
-	reference/builddate.xml		\
-	reference/version.xml 		\
 	pygobject-ref.*			\
 	$(HTML_DATA)
 
@@ -59,25 +58,20 @@ EXTRA_DIST = 				\
 	$(XSLFILES)
 
 REFERENCE_DEPS = 			\
-	reference/version.xml 		\
 	reference 			\
 	$(XMLFILES)			\
 	$(XSLFILES)
 
-reference/builddate.xml: $(REFERENCE_DEPS)
-	@$(PYTHON) -c 'import datetime; print datetime.date.today()' > $@
-
-reference/version.xml: $(top_srcdir)/config.h
-	@echo $(FULL_VERSION) > $@
-
-build_stamp: $(REFERENCE_DEPS) reference/builddate.xml 
-	xsltproc --nonet --xinclude -o html/ \
+build_stamp: $(REFERENCE_DEPS)
+	xsltproc --nonet --xinclude -o $(BUILDDIR)/html/ \
+		 --path $(BUILDDIR)/reference:$(srcdir)/reference \
                  --stringparam gtkdoc.bookname "pygobject" \
                  --stringparam gtkdoc.version ${REF_VERSION} \
-                 xsl/ref-html-style.xsl reference/pygobject-ref.xml
+                 $(srcdir)/xsl/ref-html-style.xsl \
+                 $(srcdir)/reference/pygobject-ref.xml
 	touch $@
 
-pdf: $(REFERENCE_DEPS) reference/builddate.xml 
+pdf: $(REFERENCE_DEPS)
 	xsltproc --nonet --xinclude -o pygobject-ref.fo xsl/pdf-style.xsl \
 		reference/pygobject-ref.xml
 	pdfxmltex pygobject-ref.fo >output </dev/null
